# Space

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeListsOLD.txt  Doxyfile  LICENSE.md  Makefile  README.md  ROADMAP.md  build.bat  build.py  build.sh  docs.py  format.py  main.out  setenv.bat  setenv.sh  test.space
.github/workflows/: format-ci.yml  macos-ci.yml  ubuntu-ci.yml  windows-ci.yml
core/: CMakeLists.txt
core/camera/: camera.cpp  camera.hpp  cameraq.cpp  cameraq.hpp
core/component/: audio_source.cpp  audio_source.hpp  camera.cpp  camera.hpp  component.cpp  component.hpp  light.cpp  light.hpp  model_renderer.cpp  model_renderer.hpp  physic.cpp  physic.hpp  script.cpp  script.hpp  transform.cpp  transform.hpp
core/ecs/: entity.hpp  storage.hpp  world.hpp
core/entity/: entity.cpp  entity.hpp
core/game/: game.cpp  game.hpp
core/input/: TODO.md  binding.hpp  input.cpp  input.hpp  input_binding.cpp  input_manager.cpp  input_manager.hpp  keycodes.def  mouse_buttons.def
core/inputs/: input_manager.cpp  input_manager.hpp
core/log/: log.cpp  log.hpp  log_filter.cpp  log_filter.hpp  logger.cpp  logger.hpp
core/maths/: vector.hpp  vector.inl
core/model/: mesh.cpp  mesh.hpp  model.cpp  model.hpp  model_mesh.cpp  model_mesh.hpp  model_texture.hpp  model_vertex.hpp  texture.hpp  vertex.hpp
core/renderer/: renderer.cpp  renderer.hpp
core/resource_management/: hot_reloadable.hpp  resource.hpp  resource_manager.cpp  resource_manager.hpp  resource_user.hpp
core/resource_management/loaders/: audio_loader.cpp  audio_loader.hpp
core/resource_management/resources/: res_audio.cpp  res_audio.hpp
core/scene/: scene.cpp  scene.hpp
core/serializer/: deserialize.cpp  deserialize_component.cpp  deserializer_component.cpp  serialize.cpp  serialize_component.cpp  serializer.hpp
core/shader/: shader.cpp  shader.hpp
core/space/: space.cpp  space.hpp
core/time/: time.cpp  time.hpp
core/types/: types.hpp
core/vector/: vector.hpp  vector.inl  vector2.cpp  vector2.hpp  vector3.cpp  vector3.hpp
editor/: CMakeLists.txt  main.cpp
editor/editor_camera/: editor_camera.cpp  editor_camera.hpp
editor/editor_gui/: component_viewer.cpp  editor_gui.cpp  editor_gui.hpp
editor/menu/: component_viewer.cpp  menu.cpp  menu.hpp
editor/project/: project.cpp  project.hpp
include/: Camera.hpp  Entity.hpp  FrameBuffer.hpp  Menu.hpp  Project.hpp  Scene.hpp  Shader.hpp  Test.hpp  camera.hpp  circle.h  circle.hpp  constants.h  constants.hpp  eventManager.hpp  rect.h  rect.hpp  rectangle.hpp  renderer2d.h  renderer2d.hpp  scene.hpp  scene2d.hpp  sceneObject.hpp  triangle.hpp  vector2.hpp  vector3.hpp  vector3d.h
include/Components/: Component.hpp  ModelRenderer.hpp  Physic.hpp  Transform.hpp
include/Mesh/: Mesh.hpp  Model.hpp  Vertex.hpp
include/Model/: Mesh.hpp  Model.hpp
include/Vectors/: Vector2.hpp  Vector3.hpp
main/: main.cpp
project_template/: CMakeLists.txt  main.cpp
shaders/: test.fs  test.vs
src/: Camera.cpp  Entity.cpp  FrameBuffer.cpp  Menu.cpp  Project.cpp  Scene.cpp  Shader.cpp  camera.cpp  circle.cpp  eventManager.cpp  main.cpp  rect.cpp  rectangle.cpp  renderer2d.cpp  scene.cpp  scene2d.cpp  sceneObject.cpp  triangle.cpp  vector2.cpp  vector3.cpp  vector3d.cpp
src/Components/: Component.cpp  ModelRenderer.cpp  Physic.cpp  Transform.cpp
src/Mesh/: Mesh.cpp  Model.cpp
src/Model/: Mesh.cpp  Model.cpp
src/Vectors/: Vector2.cpp  Vector3.cpp
templates/: CMakeLists.txt  build-mingw.bat  build-unix.sh  main.cpp
tests/: CMakeLists.txt  TestProject.cpp  TestVector2.cpp  TestVector3.cpp  main.cpp  test.hpp  test_entity.cpp  test_input_binding.cpp  test_log.cpp  test_logger.cpp  test_project.cpp  test_resource_manager.cpp  test_serialize.cpp  test_serialize_component.cpp  test_space.cpp  test_time.cpp  test_vector2.cpp  test_vector3.cpp  test_vector4.cpp
